@@ -68,7 +68,7 @@ my $build = Module::Build->new(
         'IO::Compress::Xz'    => 0,
         'IPC::Run'            => 0,
         'IPC::System::Simple' => 0,
-        'JSON'                => 0,
+        'JSON::MaybeXS'       => 0,
         'List::MoreUtils'     => 0,
         'Perl6::Slurp'        => 0,
         'Template'            => 0,
