@@ -58,7 +58,7 @@ REQUIREMENTS
   * IO::Compress::Xz (part of IO-Compress-LZMA)
   * IPC::Run
   * IPC::System::Simple
-  * JSON
+  * JSON::MaybeXS
   * List::MoreUtils
   * Perl6::Slurp
   * Template (part of Template Toolkit)
