@@ -62,7 +62,7 @@ The following additional Perl modules are required to use it:
 * IO::Compress::Xz (part of IO-Compress-LZMA)
 * IPC::Run
 * IPC::System::Simple
-* JSON
+* JSON::MaybeXS
 * List::MoreUtils
 * Perl6::Slurp
 * Template (part of Template Toolkit)
